# slurm_script

./: README.md  pyproject.toml
slurm_script/: __main__.py  main.py
