[tool.poetry]
name = "slurm-script"
version = "0.1.7"
description = "Python Slurm script interface"
authors = ["Kyoungseoun Chung <kyoungseoun.chung@gmail.com>"]
readme = "README.md"
packages = [{ include = "slurm_script" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
sjob = "slurm_script.main:main"
